--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <meta name="google-signin-client_id" content="195026574285-7c0hkp1g8c88tjr309jh2cnj4erk4os8.apps.googleusercontent.com">
+    <title>Google Sigin </title>
+
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body>
     
-    <h1> Accceso Denegado </h1>
+    <h1> Google Sigin </h1>
+    <hr/>
     
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <a href="#" onclick="signOut();">Sign out</a>
+
+    <script>
+
+       async function onSignIn(googleUser) {
+
+            var profile = googleUser.getBasicProfile();
+            console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+            console.log('Name: ' + profile.getName());
+            console.log('Image URL: ' + profile.getImageUrl());
+            console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+
+            var id_token = googleUser.getAuthResponse().id_token;
+            const data = { id_token }
+
+            let url = 'http://localhost:8080/api/auth/google'
+
+            fetch(url, {
+                method: 'POST',
+                headers: {'Content-Type': 'application/json'},
+                body: JSON.stringify( data )
+            })
+            .then( resp => resp.json() )
+            .then( data => console.log('Respuesta server', data) )
+            .catch( console.log )
+        }
+
+        function signOut() {
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function () {
+            console.log('User signed out.');
+            });
+        }
+
+    </script>
+
 </body>
 </html>
